--- a/assets/style.css
+++ b/assets/style.css
@@ -107,4 +107,16 @@ button {
   background-color: rgb(90, 90, 90);
   border-radius: 5px;
   padding: 15px;
+}
+.view .words .word {
+  display: inline-block;
+  font-size: 2rem;
+  background-color: gray;
+  padding: 5px 7px;
+  margin: 5px 5px;
+  border-radius: 999px;
+  border: 3px solid black;
+  border-right: 5px solid black;
+  border-bottom: 5px solid black;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
