--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,3 +1,4 @@
 @import 'components/reset';
 @import 'components/secMenu';
-@import 'components/secView'
+@import 'components/secView';
+@import 'components/utilitys';
