--- a/assets/components/_secView.scss
+++ b/assets/components/_secView.scss
@@ -19,6 +19,7 @@
     .search {
         position: relative;
         width: 60%;
+        margin: 15px 0;
         
         & input {
             width: 100%;
@@ -46,6 +47,10 @@
     }
 
     .newWord {
+        overflow: hidden;
+        height: 250px;
+        transition: .5s;
+
         legend {
             font-size: 3rem;
             margin-bottom: 15px;
@@ -67,11 +72,51 @@
     }
 
     .words {
+        display: flex;
+        flex-direction: column;
         width: 80%;
         height: 60%;
+        gap: 10px;
         background-color: rgb(90, 90, 90);
         border-radius: 5px;
         padding: 15px;
+
+        &__container {
+            width: 100%;
+            height: 90%;
+        }
+
+        &__controls {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            gap: 5px;
+            width: 100%;
+            height: 10%;
+            // background-color: aliceblue;
+
+            & button {
+                width: 40px;
+                height: 40px;
+                border: none;
+                border-radius: 100%;
+                transition: .5s;
+
+                &:hover {
+                    transform: rotate(30deg);
+                    background-color: rgba(255, 255, 255, 0.116);
+                }
+            }
+
+            & .refresh {
+                background: url(/assets/img/arrows-rotate-solid.svg) no-repeat center center;
+                background-size: 35px;
+            }
+
+            & .plus {
+                background: url(/assets/img/plus-solid.svg) no-repeat center center;
+            }
+        }
 
         .word {
             display: inline-block;
